[metadata]
name = flask_chatterbot
version = 0.0.1-dev
description = Flask and chatterbot based basic chatbot
long_description = file: README.rst

url = http://INSERT_GITHUB_URL_HERE


author = Harsh Sharma
author_email = harshsrharsh@gmail.com
maintainer = Harsh Sharma
maintainer_email = harshsrharsh@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
keywords =
    Flask
    chatterbot

[options]
install_requires =
    python>3.6
    chatterbot
    flask
    chatterbot_corpus>1.0
